RESOLVED FIXED279962
[view-transitions] https://simple-set-demos.glitch.me/5-heading-text/ glitches
https://bugs.webkit.org/show_bug.cgi?id=279962
Summary [view-transitions] https://simple-set-demos.glitch.me/5-heading-text/ glitches
Bramus
Reported 2024-09-19 02:23:35 PDT
Created attachment 472597 [details] Screen Recording There is a purple glitch when transitioning from page 1 to page 2 on the https://simple-set-demos.glitch.me/5-heading-text/ demo. Tested in Safari 18 and Safari Technology Preview 203. Expected behavior: no purple glitch to happen.
Attachments
Screen Recording (192.62 KB, video/mp4)
2024-09-19 02:23 PDT, Bramus
no flags
Single page testcase (1.78 KB, text/html)
2024-09-20 08:40 PDT, Tim Nguyen (:ntim)
no flags
Screenshot of https://simple-set-demos.glitch.me/5-heading-text/ with Safari in Compact Tabs Mode. It’s the purple used in Safari’s tab bar that flashed in between VTs. (125.47 KB, image/png)
2024-10-03 02:51 PDT, Bramus
no flags
Screenshot of https://pepelsbey.dev/ with Safari in Compact Tabs Mode. It’s the green used in Safari’s tab bar that flashed in between VTs. (398.97 KB, image/png)
2024-10-03 02:52 PDT, Bramus
no flags
Radar WebKit Bug Importer
Comment 1 2024-09-19 16:02:49 PDT
Tim Nguyen (:ntim)
Comment 2 2024-09-20 08:40:17 PDT
Created attachment 472614 [details] Single page testcase
Tim Nguyen (:ntim)
Comment 3 2024-09-20 08:46:42 PDT
Interestingly this doesn't reproduce in mini browser, I suspect this is Safari specific, potentially related to the Safari header coloring.
Tim Nguyen (:ntim)
Comment 4 2024-09-20 08:50:39 PDT
Yeah, if you disable header coloring in Safari settings, you instead see the window backdrop flash behind.
Tim Nguyen (:ntim)
Comment 5 2024-09-20 08:53:47 PDT
Wait, I think the purple flash from the original testcase is actually a different issue... Needs more investigation
Bramus
Comment 6 2024-10-03 02:45:21 PDT
Got another report on this: https://mastodon.social/@pepelsbey/113242367779018797 > I opened my website in Safari TP, and it was blinking weirdly during the transition. Not very usable, I’d say. […] There’s no green background anywhere in styles. It seems like it comes from the hero picture.
Bramus
Comment 7 2024-10-03 02:49:53 PDT
Dug a bit deeper an it’s definitely the color used in the Compact Tabs Mode that is causing this. I didn’t immediatley catch this, as I have Safari set to Separate Tabs Mode.
Bramus
Comment 8 2024-10-03 02:51:35 PDT
Created attachment 472783 [details] Screenshot of https://simple-set-demos.glitch.me/5-heading-text/ with Safari in Compact Tabs Mode. It’s the purple used in Safari’s tab bar that flashed in between VTs.
Bramus
Comment 9 2024-10-03 02:52:15 PDT
Created attachment 472784 [details] Screenshot of https://pepelsbey.dev/ with Safari in Compact Tabs Mode. It’s the green used in Safari’s tab bar that flashed in between VTs.
Tim Nguyen (:ntim)
Comment 10 2024-10-15 02:30:32 PDT
Maybe something to consider is to return true here: `RenderView::shouldPaintBaseBackground` when a view transition is running, or to paint a white background behind all snapshots.
Matt Woodrow
Comment 11 2024-10-21 19:29:52 PDT
(In reply to Tim Nguyen (:ntim) from comment #10) > Maybe something to consider is to return true here: > `RenderView::shouldPaintBaseBackground` when a view transition is running, > or to paint a white background behind all snapshots. What about in dark mode? If I'm reading it correctly, the test is fading out the old snapshot entirely, before fading in the new snapshot. That leaves a period where users can see what's behind the snapshots, which I believe should be the 'canvas surface' - https://www.w3.org/TR/css-backgrounds-3/#canvas-surface. That's typically white, but the spec explicitly clarifies that it doesn't need to be, and indeed is not in Safari at times. Possibly we should force it back to white while a view transition is animating, but it's not obvious that authors should be relying on this (without spec additions).
Matt Woodrow
Comment 12 2024-10-24 15:00:20 PDT
I filed a spec issue to try clarify the intended behaviour here - https://github.com/w3c/csswg-drafts/issues/11083
Matt Woodrow
Comment 13 2024-10-24 17:24:48 PDT
EWS
Comment 14 2024-10-28 20:05:35 PDT
Committed 285812@main (c3c287eed0e5): <https://commits.webkit.org/285812@main> Reviewed commits have been landed. Closing PR #35699 and removing active labels.
EWS
Comment 15 2024-11-01 12:40:47 PDT
Committed 283286.405@safari-7620-branch (3e0472e18604): <https://commits.webkit.org/283286.405@safari-7620-branch> Reviewed commits have been landed. Closing PR #2176 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.