Source/WebCore/css/parser/CSSParserFastPaths.h
@@ -55,7 +55,7 @@ public:
     static bool isKeywordValidForStyleProperty(CSSPropertyID, CSSValueID, const CSSParserContext&);
 
     // Parses numeric and named colors.
-    static std::optional<SRGBA<uint8_t>> parseSimpleColor(StringView, bool strict = false);
+    static WEBCORE_EXPORT std::optional<SRGBA<uint8_t>> parseSimpleColor(StringView, bool strict = false);
     static std::optional<SRGBA<uint8_t>> parseHexColor(StringView); // Hex colors of length 3, 4, 6, or 8, without leading "#".
     static std::optional<SRGBA<uint8_t>> parseNamedColor(StringView);
 
