Source/WebCore/rendering/RenderLayerCompositor.h
@@ -360,6 +360,8 @@ public:
     void updateSizeAndPositionForOverhangAreaLayer();
 #endif // HAVE(RUBBER_BANDING)
 
+    void updateRootContentsLayerBackgroundColor();
+
     // FIXME: make the coordinated/async terminology consistent.
     bool isViewportConstrainedFixedOrStickyLayer(const RenderLayer&) const;
     bool useCoordinatedScrollingForLayer(const RenderLayer&) const;
@@ -390,6 +392,8 @@ public:
     const Color& rootExtendedBackgroundColor() const { return m_rootExtendedBackgroundColor; }
 
     void updateRootContentLayerClipping();
+
+    void setRootElementCapturedInViewTransition(bool);
 
     void updateScrollSnapPropertiesWithFrameView(const LocalFrameView&) const;
 
@@ -619,6 +623,7 @@ private:
     bool m_flushingLayers { false };
     bool m_shouldFlushOnReattach { false };
     bool m_forceCompositingMode { false };
+    bool m_rootElementCapturedInViewTransition { false };
 
     bool m_isTrackingRepaints { false }; // Used for testing.
 
