LayoutTests/fast/css/view-transitions-hide-under-page-background-color-expected.html
@@ -1,0 +1,3 @@
+<!DOCTYPE HTML>
+<html>
+</html>
